# main/http_server/axe-os/src/app/components/edit/edit.component.ts
@@ -53,6 +53,7 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
   public savedChanges: boolean = false;
   public settingsUnlocked: boolean = false;
   public externalDisplay: boolean = false;
+  public externalDisplayConnected: boolean = false;
 
   @Input() uri = '';
 
@@ -171,6 +172,7 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
       this.applyAsicCapabilities(asic);
       this.statsLimit = info.statsLimit || 720;
       this.externalDisplay = info.displayBackend === 'bonanza-i2c';
+      this.externalDisplayConnected = this.externalDisplay && info.displayConnected;
 
       // Check if overclock is enabled in NVS
       if (this.hasTunableAsicSettings && (info.overclockEnabled || this.overclockUnlockRequested)) {
